# AI-Summarizers

./: .gitignore  README.md  main.py  news_summarizer.py  pyproject.toml  requirements.txt  streamlit_app.py  voice_assistant.py  youtube_summarizer.py
knowledge_base/: chroma.sqlite3
